hphp/hack/test/typecheck/nameof/unsupported_module.php.exp
File "unsupported_module.php--file2.php", line 4, characters 10-12:
`nameof` can only be used with a class (Parsing[1002])
