hphp/hack/test/typecheck/nameof/unsupported_module.php
//// file1.php
<?hh

module a.b;

//// file2.php
<?hh

function f(): void {
  nameof a.b;
}
